--- a/i2f-web/src/assets/css/ant-design-adapt.css
+++ b/i2f-web/src/assets/css/ant-design-adapt.css
@@ -24,7 +24,7 @@
 }
 
 .ant-form-inline .ant-form-item {
-    margin-bottom: 16px;
+    margin-bottom: 16px !important;
 }
 .ant-form-item .ant-select{
     min-width: 195px;
